# MINE-Database

./: .gitignore  LICENSE  README.md  TODO.md  compounds.tsv  download_and_prepare_lotus.py  environment.yml  multiple_runs.sh  output_database_testing.txt  pickaxe_pamrein.py  pickaxe_run_on_cluster.sh  pickaxe_run_template.py  pyproject.toml  reactant_product_pairs.csv  reactions.tsv  requirements.txt  requirements.yml  setup.cfg  setup.py  splitter.sh  starting_predicted_pairs.csv  tox.ini
Scripts/: RxnRuleProcessing.py  add_metacyc_rxns.py  add_rxns_from_excel.py  cfm_jobs.py  db_plots.py  example_expansion.py  generate_metanetx_database.py  model_jacquard.py  native_pipeline.py  pathway_search.py  print_top_30_rxns.py
data/: .gitignore  20230106_Cytospora_n10.csv  genus_penicillium_20_for_mines.csv
docs/: conf.py
example_data/: 20240522_Solanum_1000.csv  Solanum_1000.csv  genus_penicillium_20_for_mines.csv  starting_cpds_three.csv  target_list_many_pam.csv  target_list_single_compound_SMILES.csv
mine_database/: compound_io.py  databases.py  metabolomics.py  nb.py  pickaxe.py  pickaxe_commons.py  pickaxe_legacy.py  reactions.py  rules.py  thermodynamics.py  utils.py
minedatabase/: .gitignore
minedatabase/data/: .gitignore
mongo_interact/: mongo_binder.py  mongo_npc_fetcher.py  retrieve_predicted_inchikeys.py  retrieve_reactant_product_pairs.py  update_lotus_id.py  update_metadata.py
pickles/: .gitignore
scripts_of_commonslab/: 01_splitter.sh  02_pickaxe_lotus.sh  03_tsv_to_parquet.py  add_compounds_and_rules_to_dataframe.py  combine_to_original_dataset.py  combine_to_original_dataset.sh  database_testing.py  database_testing.sh  multiple_runs.sh  pickaxe_lotus.sh  pickaxe_run_on_cluster.sh  pickaxe_run_on_cluster_onebyone.sh  splits_to_one_file.sh  splitter.sh
tests/: conftest.py  test_mongodb_connection.py
(+65 files in other folders)
