[tool.poetry]
name = "mine-database"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
keras = "^3.1.1"
lxml = "4.9"
mordred = "1.2"
numpy = "^1.26.4"
pandas = "^2.2.1"
pymongo = "^4.6.2"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
python-libsbml = "^5.20.2"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
sphinxcontrib-napoleon = "^0.7"
tensorflow = "^2.16.1"
torch = "^2.2.1"
numpydoc = "^1.6.0"
rdkit = "^2023.9.5"
equilibrator-api = "^0.6.0"
equilibrator-assets = "^0.6.0"
ipython = "^8.23.0"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
polars = "^0.20.28"
inquirerpy = "^0.3.4"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
