[project]
name = "mine-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.18"
dependencies = [
    "pandas>=2.2.3",
    "pymongo>=4.10.1",
    "rdkit>=2024.3.6",
]

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "mine-database",
    "pytest>=8.3.3",
]

[tool.uv.sources]
mine-database = { workspace = true }
